feat(redis): 添加Redis缓存支持并集成到核心服务
添加统一的Redis客户端封装包@csisp/redis，提供基础缓存操作能力
在backend和bff服务中集成Redis缓存，优化Dashboard、User、Course等核心服务的查询性能
更新环境变量配置和文档，说明Redis部署规范和缓存键设计约定
调整初始化脚本的日志格式，增加数据库容器启动提示

--- a/docs/src/architecture/技术架构设计文档.md
+++ b/docs/src/architecture/技术架构设计文档.md
@@ -109,7 +109,7 @@ apps/backend/
 │       └── 📄 index.ts              # 类型定义导出文件
 ├── 📁 config/                        # 配置文件
 │   ├── 📄 database.ts                # 数据库配置
-│   ├── 📄 redis.ts                  # Redis配置
+│   ├── 📄 redis.ts                  # Redis配置（@csisp/redis 封装）
 │   ├── 📄 auth.ts                   # 认证配置
 │   └── 📄 app.ts                    # 应用配置
 ├── 📁 scripts/                       # 脚本文件
@@ -119,6 +119,56 @@ apps/backend/
 ├── 📄 esbuild.config.js              # 构建配置
 └── 📄 .env.example                   # 环境变量示例
 ```
+
+### 2.X Redis 部署与命名规范
+
+为简化运维与保证一致性，Redis 在不同环境按「一环境一实例」进行部署：
+
+- Development：本地通过 `infra/database/docker-compose.db.yml` 启动 `postgres + redis`
+- Staging：预发/联调环境使用独立 Redis 实例
+- Production：生产环境使用独立 Redis 实例（可按需扩展为主从或集群）
+
+应用侧通过 `@csisp/redis` 统一访问 Redis：
+
+- 连接信息：从根 `.env` 读取 `REDIS_HOST/REDIS_PORT/REDIS_DB/REDIS_PASSWORD`
+- 命名空间：`REDIS_NAMESPACE`，默认 `csisp`，在客户端内部作为全局前缀
+- 逻辑隔离：
+  - BFF：`csisp:bff:*`
+  - Backend：`csisp:be:*`
+  - 后续如需新增系统，可通过新的命名空间或前缀扩展
+
+推荐的键设计示例：
+
+```text
+csisp:bff:dashboard:summary:<userId>      # BFF 学生仪表盘聚合缓存
+csisp:be:course:detail:<courseId>         # 后端课程详情缓存
+csisp:be:rate-limit:user:<userId>         # 用户级限流计数（未来可扩展）
+```
+
+缓存读写遵循「Cache-Aside」模式：
+
+```mermaid
+flowchart LR
+  A[客户端请求] --> B[服务读取缓存]
+  B -->|命中| C[直接返回缓存]
+  B -->|未命中| D[查询 PostgreSQL]
+  D --> E[写入 Redis 缓存]
+  E --> C
+```
+
+说明：
+
+- 不以 Redis 作为权威数据源，所有持久业务数据仍由 PostgreSQL 承载
+- 不建议用一个 Redis 实例承载 dev/staging/prod 的数据隔离，环境隔离应通过「不同实例 + 不同 `.env`」完成
+- 命名空间与前缀主要用于区分系统与业务域，而非区分环境
+
+### Backend 缓存与失效约定
+
+- 键命名：`csisp:be:<domain>:<entity>[:<scope>]...`；分页键追加 `page/size`，筛选条件以 `key=value` 形式拼接。
+- TTL：详情/分布 300s；列表 120s；统计/活跃 30–60s；角色/学号查询 600s。
+- 失效：写操作后删除精确键（详情/统计）；列表分页以短TTL为主，必要时枚举常用页删除；可选事件广播通知 BFF 失效。
+- 接入位置：Service 层直接使用共享客户端 `@csisp/redis` 的 `get/set/del`。
+- 降级：`REDIS_ENABLED=false` 时不启用缓存；Redis异常不影响主路径。
 
 #### 前端后台应用结构（Vite 脚手架创建）
 
