--- a/docs/src/backend/后端设计文档.md
+++ b/docs/src/backend/后端设计文档.md
@@ -1449,51 +1449,31 @@ const searchUsers = async (keyword: string, page: number, pageSize: number) => {
 #### 7.1.1 Redis缓存配置
 
 ```typescript
-// Redis配置
-const redisConfig = {
-  host: process.env.REDIS_HOST || 'localhost',
-  port: parseInt(process.env.REDIS_PORT || '6379'),
-  password: process.env.REDIS_PASSWORD,
-  db: parseInt(process.env.REDIS_DB || '0'),
-  keyPrefix: 'csisp:',
-};
+// 使用 @csisp/redis 封装的客户端
+import { get, set, del } from '@csisp/redis';
 
-// 缓存服务
-class CacheService {
-  private redis: Redis;
+// 课程详情缓存示例
+async function getCourseDetailWithCache(courseId: number) {
+  const cacheKey = `be:course:detail:${courseId}`;
 
-  constructor() {
-    this.redis = new Redis(redisConfig);
-  }
-
-  // 设置缓存
-  async set(key: string, value: any, ttl?: number): Promise<void> {
-    const serializedValue = JSON.stringify(value);
-    if (ttl) {
-      await this.redis.setex(key, ttl, serializedValue);
-    } else {
-      await this.redis.set(key, serializedValue);
+  // 1. 读取缓存（命中即返回）
+  if (process.env.REDIS_ENABLED === 'true') {
+    const cached = await get(cacheKey);
+    if (cached) {
+      return JSON.parse(cached);
     }
   }
 
-  // 获取缓存
-  async get<T>(key: string): Promise<T | null> {
-    const value = await this.redis.get(key);
-    return value ? JSON.parse(value) : null;
+  // 2. 未命中时查询数据库
+  const course = await CourseModel.findByPk(courseId /* include 省略 */);
+  if (!course) return null;
+
+  // 3. 写入缓存，设置合理 TTL（例如 300 秒）
+  if (process.env.REDIS_ENABLED === 'true') {
+    await set(cacheKey, JSON.stringify(course), 300);
   }
 
-  // 删除缓存
-  async del(key: string): Promise<void> {
-    await this.redis.del(key);
-  }
-
-  // 批量删除
-  async delPattern(pattern: string): Promise<void> {
-    const keys = await this.redis.keys(pattern);
-    if (keys.length > 0) {
-      await this.redis.del(...keys);
-    }
-  }
+  return course;
 }
 ```
 
@@ -1503,14 +1483,15 @@ class CacheService {
 // 缓存键设计
 const CacheKeys = {
   // 用户相关
-  user: (id: number) => `user:${id}`,
-  userPermissions: (id: number) => `user:${id}:permissions`,
-  userCourses: (id: number) => `user:${id}:courses`,
+  user: (id: number) => `be:user:${id}`,
+  userPermissions: (id: number) => `be:user:${id}:permissions`,
+  userCourses: (id: number) => `be:user:${id}:courses`,
 
   // 课程相关
-  course: (id: number) => `course:${id}`,
-  courseStudents: (id: number) => `course:${id}:students`,
-  courseTeachers: (id: number) => `course:${id}:teachers`,
+  course: (id: number) => `be:course:${id}`,
+  courseDetail: (id: number) => `be:course:detail:${id}`,
+  courseStudents: (id: number) => `be:course:${id}:students`,
+  courseTeachers: (id: number) => `be:course:${id}:teachers`,
 
   // 考勤相关
   attendanceStats: (courseId: number, date: string) => `attendance:${courseId}:${date}:stats`,
