refactor(database): 重构数据库迁移与种子管理为独立子包
- 将原 packages/db-workflows 迁移至 infra/database 作为 @csisp/infra-database 子包
- 实现基于 Umzug 的 TypeScript 迁移系统，替换 sequelize-cli
- 添加 CLI 命令支持迁移、回滚、状态查询和开发环境重置
- 更新文档和初始化脚本以适配新流程
- 保留 MongoDB 种子功能并整合到新子包

--- a/docs/src/architecture/技术架构设计文档.md
+++ b/docs/src/architecture/技术架构设计文档.md
@@ -61,10 +61,9 @@ CSISP/
 │   ├── 📁 types/                     # 共享类型定义（@csisp/types）
 │   ├── 📁 redis/                     # Redis 客户端封装（@csisp/redis）
 │   ├── 📁 upstream/                  # 上游 HTTP 客户端封装（@csisp/upstream）
-│   ├── 📁 utils/                     # 工具函数（@csisp/utils）
-│   └── 📁 db-workflows/              # 数据库工作流（Postgres 迁移/种子、Mongo 种子）
+│   └── 📁 utils/                     # 工具函数（@csisp/utils）
 ├── 📁 docs/                          # 文档层 - 项目文档和指南
-├── 📁 infra/                         # 基础设施脚本（如数据库 docker-compose）
+├── 📁 infra/                         # 基础设施脚本（如数据库 docker-compose、@csisp/infra-database）
 ├── 📁 tests/                         # 测试层 - 测试相关文件
 ├── 📄 package.json                   # Monorepo 根配置
 ├── 📄 pnpm-workspace.yaml            # pnpm 工作区配置
@@ -226,8 +225,7 @@ packages/
 ├── 📁 types/         # @csisp/types：共享业务类型与 API/DTO 定义
 ├── 📁 redis/         # @csisp/redis：Redis 客户端封装
 ├── 📁 upstream/      # @csisp/upstream：HTTP 上游客户端封装
-├── 📁 utils/         # @csisp/utils：通用工具函数
-└── 📁 db-workflows/  # @csisp/db-workflows：数据库迁移与种子统一入口
+└── 📁 utils/         # @csisp/utils：通用工具函数
 ```
 
 ### 3. 工具配置（根目录）
