feat(auth): 重构认证模块，实现统一OIDC集成方案
- 新增react组件库支持前端认证流程
- 重构服务端中间件与NestJS集成
- 迁移常量至core模块并更新相关引用
- 实现完整的OIDC流程与PKCE安全机制
- 提供文档与SOP指导接入流程
- 移除各应用中的JWT直接依赖，改用统一SDK

--- a/docs/src/架构设计/安全架构.md
+++ b/docs/src/架构设计/安全架构.md
@@ -7,6 +7,23 @@ outline: deep
 
 # 安全架构
 
-本页为阶段 1 占位。后续将补充 JWT、RBAC 与输入校验等约定。
+本页介绍 CSISP 系统的安全设计原则，包括身份认证、权限控制与基础防护。
 
-关键词：安全 架构 认证 授权 RBAC
+## 身份认证 (Authentication)
+
+系统采用统一的 OIDC 认证体系，详细的流程与接入方式请参考：
+
+- [身份认证与鉴权](/src/基础设施与基建/身份认证与鉴权)
+
+## 权限控制 (Authorization)
+
+目前系统基于 RBAC（Role-Based Access Control）模型进行权限管理：
+
+- **角色映射**: 用户在 IdP 侧定义的角色会透传至业务系统。
+- **中间件校验**: 通过 `@csisp/auth/server` 提供的 `koaAuth` 或 `requireRoles` 中间件在路由层进行拦截。
+
+## 安全防护
+
+- **密码安全**: 采用 `scrypt` 强哈希算法存储。
+- **传输安全**: 全站强制 HTTPS（生产环境）。
+- **流程安全**: 强制启用 PKCE 防止授权码劫持。
