feat: 迁移环境变量管理至Infisical并重构相关配置
refactor: 移除dotenv依赖，使用requireEnv统一校验环境变量
refactor(redis): 移除REDIS_ENABLED配置，改为必需依赖
refactor(database): 统一使用DATABASE_URL连接数据库
docs: 添加Infisical接入指南和配置文档
chore: 移除.env文件和check-env脚本

--- a/docs-refer/architecture/技术架构设计文档.md
+++ b/docs-refer/architecture/技术架构设计文档.md
@@ -150,7 +150,7 @@ flowchart LR
 - TTL：详情/分布 300s；列表 120s；统计/活跃 30–60s；角色/学号查询 600s。
 - 失效：写操作后删除精确键（详情/统计）；列表分页以短 TTL 为主，必要时枚举常用页删除；可选事件广播通知 BFF 失效。
 - 接入位置：backend-integrated 的 Service 层通过 `@infra/redis`（内部转发到 `@csisp/redis`）访问缓存。
-- 降级：`REDIS_ENABLED=false` 时不启用缓存；Redis 异常不影响主业务路径。
+- 依赖：Redis 为必需依赖，配置缺失或不可用时应尽早失败并告警。
 
 ### Mongo（内容域）说明（摘要）
 
@@ -345,15 +345,15 @@ sequenceDiagram
   participant PGMod as SequelizePostgresModule
 
   Dev->>Main: pnpm --filter @csisp/backend-integrated dev
-  Main->>Main: 加载根 .env 与 apps/backend-integrated/.env
-  Main->>Main: 若 REDIS_ENABLED=true，则 connectRedis()
+  Main->>Main: 读取 process.env 中的配置
+  Main->>Main: connectRedis()
   Main->>Nest: NestFactory.create(AppModule)
   Nest->>AppMod: 构建模块依赖图
   AppMod->>PGMod: 通过 @nestjs/sequelize 初始化 Postgres 连接
   PGMod-->>Nest: 注册 sequelize-typescript 模型并提供 @InjectModel 注入
   Nest-->>Main: 应用实例就绪
   Main->>Main: 注册拦截器/过滤器/CORS
-  Main->>Main: app.listen(BACKEND_INTEGRATED_PORT)
+  Main->>Main: app.listen(CSISP_BACKEND_INTEGRATED_PORT)
 ```
 
 ```mermaid
