--- a/docs-refer/frontend/前端中台设计文档.md
+++ b/docs-refer/frontend/前端中台设计文档.md
@@ -519,7 +519,7 @@ class HttpService {
 
   constructor() {
     this.instance = axios.create({
-      baseURL: import.meta.env.VITE_API_BASE_URL,
+      baseURL: import.meta.env.CSISP_BFF_URL,
       timeout: 30000,
       headers: {
         'Content-Type': 'application/json',
