--- a/docs/src/开发指南/代码与风格约定.md
+++ b/docs/src/开发指南/代码与风格约定.md
@@ -7,6 +7,31 @@ outline: deep
 
 # 代码与风格约定
 
-本页为阶段 1 占位。后续将对齐 ESLint、Prettier、EditorConfig 与 TypeScript 规范。
+本仓库采用统一的 ESLint Flat Config 与 Prettier 规范；在 Monorepo 下按子项目类型启用差异化规则。
+
+环境变量与配置管理
+
+- 配置唯一事实源：各子项目应在 src/config 下集中管理运行时配置，并向业务侧导出结构化 config 对象。
+- 禁止直接读取环境变量：在业务代码中禁止使用 process.env 与 import.meta.env（见 eslint.config.ts 中 no-restricted-syntax 规则），例外：
+  - 子项目的 src/config/** 以及层级内的 **/config/\*\* 目录
+  - 构建配置文件（如 vite.config._、next.config._）
+  - Backoffice 项目（apps/backoffice/\*\*）暂不启用限制
+- Node 与前端差异：
+  - Node 侧通过 @csisp/config 提供的 zod schema 与 parseEnv 进行校验与解析
+  - 前端侧在各自 src/config 里从 import.meta.env 读取并向外暴露常量，业务只消费 config
+
+已落地的示例
+
+- BFF：端口、路由前缀、JWT、上游地址与 Redis 均集中于 [apps/bff/src/config](file:///Users/bytedance/project/CSISP/apps/bff/src/config/index.ts)
+- Backend-Integrated：端口、CORS 白名单、DB/Mongo/Redis、IdP Thrift 与 JWT 均集中于 [apps/backend-integrated/src/config](file:///Users/bytedance/project/CSISP/apps/backend-integrated/src/config/index.ts)
+- IdP Server：Issuer BaseURL、DB、JWT/KEK、Session Cookie、Redis 集中于 [apps/idp/server/src/config](file:///Users/bytedance/project/CSISP/apps/idp/server/src/config/index.ts)
+- 前端：Axios 基础配置与路由 baseUrl 集中于 [apps/frontend-admin/src/config](file:///Users/bytedance/project/CSISP/apps/frontend-admin/src/config/index.ts) 与 [apps/frontend-portal/src/config](file:///Users/bytedance/project/CSISP/apps/frontend-portal/src/config/index.ts)
+
+常见问题
+
+- 为何在某些文件还能看到 process.env/NODE_ENV？
+  - 允许在构建配置文件与部分框架生成/必须文件中使用；业务逻辑请统一经由 src/config。
+- 如何扩展新的配置项？
+  - 在所在子项目 src/config/env.ts 中补充 zod schema（或前端 config 中补充），再在 src/config/index.ts 输出。
 
 关键词：开发指南 代码风格 Lint 格式化 约定
