refactor(idl): 移除 Thrift JS 生成支持并简化配置
refactor(database): 更新数据库配置和初始化脚本
- 添加生产环境数据库迁移和初始化脚本

fix(infisical): 更新服务配置和文档
- 限制 Infisical 服务仅本地访问
- 更新文档中的服务地址和端口

docs: 更新环境搭建文档
- 移除 Thrift 安装说明
- 更新 IDL 生成工具说明

--- a/docs/src/入门指南/环境搭建.md
+++ b/docs/src/入门指南/环境搭建.md
@@ -57,16 +57,10 @@ docker run -d --name csisp-mongo -p 27017:27017 mongo:6
 > [!TIP]
 > 已安装 Docker Desktop 的情况下，也可通过图形界面创建服务。生产或多人协作建议使用 docker compose 统一声明（后续在“基础设施与基建”细化）。
 
-## Thrift IDL（契约生成）
-
-- 安装 Thrift（macOS 可通过 Homebrew）
-
-```bash
-brew install thrift
-thrift --version
-```
+## IDL（契约生成）
 
 - IDL 文件与生成流程在“基础设施与基建 / IDL（Thrift）”中说明，生成的类型在多项目间复用
+- 项目使用 `@creditkarma/thrift-typescript` + `tsc` 统一生成类型，无需安装本机 Apache Thrift CLI
 - 结合根脚本的 `dev:infra`，可在启动前完成契约生成与数据库初始化（详见“快速开始”）
 
 ## 初始化与环境变量
